# OptiCV

./: .gitignore  PROMPTS.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/data/: jd_keyword_cache.json  skills_ontology.json
backend/src/: app.py
backend/src/models/: prompts.py  schemas.py
backend/src/routers/: chat.py  download.py  enhance.py  generate.py  parse.py  score.py
backend/src/services/: ats_scorer.py  doc_generator.py  gemini.py  pdf_generator.py  resume_parser.py
backend/src/utils/: formatting.py  keywords.py
frontend/: README.md  next.config.mjs  package.json  vercel.json
frontend/public/: test_payload.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/optimize/: page.tsx
frontend/src/app/score/: page.tsx
frontend/src/components/: chat-panel.tsx  jd-comparison.tsx  keyword-chart.tsx  resume-form.tsx  resume-preview.tsx  score-card.tsx  section-editor.tsx  sidebar.tsx  skill-gap.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  calendar.tsx  card.tsx  date-picker.tsx  progress.tsx  react-datepicker.tsx
frontend/src/lib/: api.ts  types.ts
