[project]
name = "opticv-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "fpdf>=1.7.2",
  "fpdf2>=2.8.5",
  "google-genai>=1.62.0",
  "pdfplumber>=0.11.9",
  "pydantic[email]>=2.12.5",
  "python-docx>=1.2.0",
  "python-dotenv>=1.2.1",
  "python-multipart>=0.0.22",
  "requests>=2.32.5",
  "uvicorn>=0.22.0",
]
